--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -136,6 +136,7 @@ textarea {
   width: 350px;
   display: flex;
   align-items: flex-start;
+  color: var(--color-accent);
 }
 .recipe-item__detail {
   margin-top: -20px;
@@ -432,7 +433,7 @@ textarea {
 
 .cont_btn_open_dets > a {
   display: block;
-  padding-top: -5px;
+  padding-top: 5px;
   width: 30px;
   height: 30px;
   background-color: rgb(6, 122, 70);
@@ -569,7 +570,7 @@ textarea {
 }
 .top-recep__cta {
   text-decoration: none;
-  font-size: font-size(1);
+  font-size: 12px;
   border: 1px solid var(--color-accent);
   color: black;
   opacity: 50%;
@@ -597,6 +598,8 @@ textarea {
   text-align: center;
 }
 .recep-item__img {
+  -o-object-fit: contain;
+     object-fit: contain;
   width: 250px;
   height: 180px;
   vertical-align: middle;
@@ -609,7 +612,7 @@ textarea {
 }
 .recep-item__link {
   text-decoration: none;
-  color: rgb(6, 122, 70);
+  color: var(--color-accent);
 }
 
 .item-overlay {
@@ -628,7 +631,6 @@ textarea {
 .item-detail {
   display: block;
   padding: 15px 0;
-  padding-bottom: 0;
   color: var(--color-accent);
 }
 
@@ -640,39 +642,109 @@ textarea {
   margin-bottom: 0;
 }
 
-.weekMenu {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+.weeklyMenu-container {
+  background-color: var(--color-bg-tint);
+  margin-top: 280px;
 }
-.weekMenu__item {
+
+.WeeklyMenu {
+  margin: 20px;
+}
+.WeeklyMenu__container {
   display: flex;
-  margin-bottom: 20px;
+  flex-grow: 4;
+  justify-content: space-around;
+  width: 80%;
+  margin-left: 100px;
+}
+.WeeklyMenu__container__title {
+  color: var(--color-accent);
+  margin-top: -20px;
+}
+.WeeklyMenu__item {
+  margin-bottom: 10px;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  margin-left: 20px;
+  background-color: var(--color-basic-bg);
+  box-shadow: 1px 1px 20px -5px rgba(0, 0, 0, 0.5);
+}
+.WeeklyMenu__title {
+  justify-content: center;
+  color: var(--color-accent);
+  text-shadow: 2px 2px wheat;
+}
+.WeeklyMenu__btn-group {
+  display: flex;
+  align-items: flex-end;
+  width: 15px;
+  margin: -38px 1px 10px 1px;
+}
+.WeeklyMenu__btn {
+  width: 5px;
+  height: 5px;
+  background-color: transparent;
+  color: var(--color-accent);
+  display: flex;
+  flex-direction: row;
 }
 
 .previous {
   background-color: transparent;
-  border-color: rgb(6, 122, 70);
-  border-style: solid;
+  border: var(--color-accent) solid 1px;
   border-radius: 999px;
-  border-width: 1px;
   cursor: pointer;
-  height: 50px;
+  height: 45px;
   outline: none;
-  width: 50px;
+  width: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px;
-  margin: 8px 32px;
+  margin-left: 450px;
+}
+.previous__icon {
+  font-size: 25px;
+  color: var(--color-accent);
 }
 
+.next {
+  background-color: transparent;
+  border: var(--color-accent) solid 1px;
+  border-radius: 999px;
+  cursor: pointer;
+  height: 45px;
+  outline: none;
+  width: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 450px;
+  margin-top: -50px;
+}
+.next__icon {
+  font-size: 25px;
+  color: var(--color-accent);
+}
+
+.chefshad-rating {
+  position: relative;
+  display: flex;
+  z-index: 23000;
+  height: 20px;
+  width: 20px;
+  margin: 5px 5px 5px;
+}
+
+.btn__rating {
+  margin-right: 5px;
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-bg-tint);
+}
 .btn__icon {
   height: 20px;
   width: 20px;
-  margin-left: 10px;
-}
-.btn__radio {
-  display: none;
+  margin-left: 5px;
+  margin-bottom: 20px;
 }/*# sourceMappingURL=recipe.css.map */
