--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -45,7 +45,7 @@ body {
   --color-basic-bg: white;
   --color-grey: #777777;
   --color-light-green: #1bcc5c;
-  font-family: "Dosis" sans-serif;
+  font-family: "Dosis", "Poppins", sans-serif;
 }
 
 .sr-only {
@@ -74,9 +74,10 @@ body {
   margin-bottom: 2em;
 }
 .hero__title {
-  color: var(--color-accent);
+  color: white;
+  text-shadow: 1px 1px var(--color-accent);
   padding: 0.25em;
-  font-size: font-size(5);
+  font-size: 14px;
   font-weight: bold;
   border-radius: 0.25em;
   text-align: center;
