themeSelector and selection breakfast

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -11,12 +11,11 @@
   width: 100%;
   position: absolute;
   height: 280px;
-  background-color: white;
+  background-color: var(--color-basic-bg);
   top: 0;
   border-radius: 70%/25%;
   z-index: 15;
   opacity: 1;
-  transition: opacity 0.5s ease-in;
 }
 
 .upper-nav {
@@ -66,7 +65,7 @@
 }
 .shop__item {
   font-size: 8px;
-  color: white;
+  color: var(--color-basic-bg);
   margin-top: -3px;
 }
 .shop__item:hover {
@@ -83,6 +82,7 @@ li {
 }
 
 .dropdown-menu {
+  color: var(--color-text);
   display: none;
   padding: 10px 0px 5px 5px;
   min-width: 140px;
@@ -102,6 +102,7 @@ li {
 }
 
 .dropdown-item {
+  color: var(--color-text);
   display: block;
   width: 100%;
   clear: both;
@@ -120,19 +121,16 @@ li {
   transform: scale(0.7);
 }
 
-.theme_selector {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0px auto;
-  padding-right: 50px;
+.theme {
+  position: absolute;
+  top: 0;
+  right: 25px;
 }
 
-.theme_buttons div {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-  margin: 15px 10px;
-  border-radius: 50%;
+.sun-moon {
+  padding: 10px;
+  margin: 15px;
+  background-color: white;
+  color: var(--color-accent);
+  border: 1px var(--color-accent) solid;
 }/*# sourceMappingURL=header.css.map */
