--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -12,12 +12,12 @@
   width: 100%;
   position: absolute;
   height: 280px;
-  background-color: white;
+  background-color: var(--color-basic-bg);
   top: 0;
   border-radius: 70% / 25%;
   z-index: 15;
   opacity: 1;
-  transition: opacity 0.5s ease-in;
+  // transition: opacity 0.5s ease-in;
 }
 
 .upper-nav {
@@ -70,7 +70,7 @@
 
   &__item {
     font-size: 8px;
-    color: white;
+    color: var(--color-basic-bg);
     margin-top: -3px;
   }
 
@@ -88,6 +88,7 @@ li {
 }
 
 .dropdown-menu {
+  color: var(--color-text);
   display: none;
   padding: 10px 0px 5px 5px;
   min-width: 140px;
@@ -107,6 +108,7 @@ li {
 }
 
 .dropdown-item {
+  color: var(--color-text);
   display: block;
   width: 100%;
   clear: both;
@@ -126,19 +128,19 @@ li {
   transform: scale(0.7);
 }
 // theme Selector
-.theme_selector {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0px auto;
-  padding-right: 50px;
+
+.theme {
+  position: absolute;
+  top: 0;
+  right: 25px;
 }
 
-.theme_buttons div {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-  margin: 15px 10px;
-  border-radius: 50%;
+.sun-moon {
+  padding: 10px;
+  margin: 15px;
+  background-color: white;
+  color: var(--color-accent);
+  border: 1px var(--color-accent) solid;
 }
+
+
