--- a/src/components/Recipe/RecipeAside.css
+++ b/src/components/Recipe/RecipeAside.css
@@ -48,4 +48,13 @@ input {
   text-align: center;
   vertical-align: middle;
   width: 15px;
+}
+
+.item__btn {
+  z-index: 300000;
+  margin-top: 35px;
+  box-shadow: rgb(6, 122, 70) 0px 0px 0px 1px;
+  background-color: rgb(210, 248, 149);
+  color: rgb(6, 122, 70);
+  border: 1px solid rgb(6, 122, 70);
 }/*# sourceMappingURL=RecipeAside.css.map */
