--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -103,9 +103,11 @@ textarea {
   font-weight: 400;
 }
 .recipe__title {
-  padding-top: 40px;
-  font-weight: 700;
-  padding-right: 16px;
+  margin: 4em;
+  margin-bottom: 0;
+  font-size: 28px;
+  color: white;
+  text-shadow: 1px 1px var(--color-accent);
 }
 .recipe__list {
   margin-right: -16px;
@@ -570,8 +572,8 @@ textarea {
 }
 .top-recep__cta {
   text-decoration: none;
-  font-size: 12px;
-  border: 1px solid var(--color-accent);
+  font-size: 16px;
+  border: 1px solid rgb(6, 122, 70);
   color: black;
   opacity: 50%;
   padding: 1em;
@@ -611,8 +613,10 @@ textarea {
   padding: 2px;
 }
 .recep-item__link {
-  text-decoration: none;
-  color: var(--color-accent);
+  background-color: white;
+  color: rgb(6, 122, 70);
+  font-size: 14px;
+  border: white;
 }
 
 .item-overlay {
