--- a/src/components/User/user.scss
+++ b/src/components/User/user.scss
@@ -12,11 +12,7 @@
   margin-top: 8em;
 
   &__title {
-    margin: 4em;
-    margin-bottom: 0;
-    font-size: 28px;
-    color: white;
-    text-shadow: 1px 1px var(--color-accent);
+    @include title();
   }
 }
 
