--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -46,8 +46,15 @@ html {
   box-sizing: inherit;
 }
 
+// Chrome, Safari and Opera
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
+  scrollbar-width: none; // firefox
   color: var(--color-text);
+  background-color: var(--color-basic-bg);
   font-family: "Dosis", "Poppins", sans-serif;
 }
 
@@ -88,12 +95,16 @@ body {
     margin-top: 4em;
   }
 
-  &__searchform {
+  &__searchbar {
     color: var(--color-accent);
     z-index: 2;
     margin-bottom: 50px;
     padding: 40px;
   }
+
+&__searchicon{
+
+}
 
   &__input-group-append {
     border-radius: 10px;
@@ -103,7 +114,7 @@ body {
     letter-spacing: 0.5px;
     color: var(--color-accent);
     background-color: var(--color-basic-bg);
-    padding: 15px;
+    padding: 25px;
     border: 0.5px solid var(--color-accent);
   }
 }
@@ -233,31 +244,25 @@ textarea:valid + label {
   transform: scale(1.1, 1.1);
   filter: sepia(0.5);
 }
-// algemeen button styling
+// general button styling
 
 button {
-  background-color: var(--color-accent);
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 10px;
-  display: block;
-  padding: 12px 15px;
-  margin: 2px auto;
-  border: none;
-  border-radius: 4px;
+  text-transform: uppercase;
+  outline: 0;
+  background: var(--color-green);
+  border: 0;
+  color: var(--color-light-green);
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 14px;
   cursor: pointer;
-  user-select: none;
-  transition: 0.2s;
+  margin-top: 10px; 
 }
 
 button:hover {
   transform: scale(1.1, 1.1);
 }
 
-// button:active {
-//   transform: scale(1.1, 1.1);
-//   filter: sepia(0.5);
-// }
 /* footer --------------------------------------------- */
 
 .footer {
