--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,7 +6,6 @@
   letter-spacing: 0.5px;
   line-height: 20px;
 }
-
 .header__container {
   width: 100%;
   position: absolute;
@@ -23,6 +22,7 @@
   padding-bottom: 10px;
 }
 .upper-nav__logo {
+  width: 300px;
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
@@ -52,6 +52,7 @@
   margin-left: 200px;
 }
 .main-nav__sub-item {
+  color: var(--color-text);
   text-decoration: none;
 }
 
@@ -128,9 +129,14 @@ li {
 }
 
 .sun-moon {
-  padding: 10px;
+  padding: 5px;
+  width: 60px;
   margin: 15px;
-  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--color-basic-bg);
   color: var(--color-accent);
+  font-size: 14px;
   border: 1px var(--color-accent) solid;
+  border-radius: 60px;
 }/*# sourceMappingURL=header.css.map */
