--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,18 +6,17 @@
   font-size: 12px;
   letter-spacing: 0.5px;
   line-height: 20px;
-}
 
-.header__container {
-  width: 100%;
-  position: absolute;
-  height: 280px;
-  background-color: var(--color-basic-bg);
-  top: 0;
-  border-radius: 70% / 25%;
-  z-index: 15;
-  opacity: 1;
-  // transition: opacity 0.5s ease-in;
+  &__container {
+    width: 100%;
+    position: absolute;
+    height: 280px;
+    background-color: var(--color-basic-bg);
+    top: 0;
+    border-radius: 70% / 25%;
+    z-index: 15;
+    opacity: 1;
+  }
 }
 
 .upper-nav {
@@ -25,6 +24,7 @@
   padding-bottom: 10px;
 
   &__logo {
+    width: 300px;
     display: inline-block;
     padding-top: 0.3125rem;
     padding-bottom: 0.3125rem;
@@ -56,9 +56,13 @@
   }
 
   &__sub-item {
+    color: var(--color-text);
     text-decoration: none;
   }
 }
+
+// searchbar
+
 
 .shop {
   border: 2px solid var(--color-accent);
@@ -136,11 +140,14 @@ li {
 }
 
 .sun-moon {
-  padding: 10px;
+  padding: 5px;
+  width: 60px;
   margin: 15px;
-  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--color-basic-bg);
   color: var(--color-accent);
+  font-size: 14px;
   border: 1px var(--color-accent) solid;
+  border-radius: 60px;
 }
-
-
