--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -17,8 +17,14 @@ html {
   box-sizing: inherit;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
+  scrollbar-width: none;
   color: var(--color-text);
+  background-color: var(--color-basic-bg);
   font-family: "Dosis", "Poppins", sans-serif;
 }
 
@@ -57,7 +63,7 @@ body {
   text-align: center;
   margin-top: 4em;
 }
-.hero__searchform {
+.hero__searchbar {
   color: var(--color-accent);
   z-index: 2;
   margin-bottom: 50px;
@@ -70,7 +76,7 @@ body {
   letter-spacing: 0.5px;
   color: var(--color-accent);
   background-color: var(--color-basic-bg);
-  padding: 15px;
+  padding: 25px;
   border: 0.5px solid var(--color-accent);
 }
 
@@ -206,21 +212,16 @@ textarea:valid + label {
 }
 
 button {
-  background-color: var(--color-accent);
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 10px;
-  display: block;
-  padding: 12px 15px;
-  margin: 2px auto;
-  border: none;
-  border-radius: 4px;
+  text-transform: uppercase;
+  outline: 0;
+  background: var(--color-green);
+  border: 0;
+  color: var(--color-light-green);
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 14px;
   cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  transition: 0.2s;
+  margin-top: 10px;
 }
 
 button:hover {
