--- a/src/components/Recipe/Styling/recipe.css
+++ b/src/components/Recipe/Styling/recipe.css
@@ -186,10 +186,12 @@ a {
 }
 .recipe-item__content {
   display: flex;
-  margin-top: 60px;
+  margin-top: 90px;
   margin-left: -350px;
 }
 .recipe-item__btn {
+  width: 55px;
+  height: 55px;
   margin: 10px 5px;
   box-shadow: var(--color-light-green) 0px 0px 0px 1px;
   background-color: rgb(210, 248, 149);
