--- a/src/components/Recipe/Styling/favorites.css
+++ b/src/components/Recipe/Styling/favorites.css
@@ -12,7 +12,7 @@
 .top-recep__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 10px 20px;
 }
 .top-recep__title {
   padding-top: 2em;
@@ -24,13 +24,12 @@
   text-align: center;
 }
 .top-recep__list {
-  width: 80%;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
   margin-bottom: 2em;
-  margin-right: -15px;
-  margin-left: -15px;
 }
 .top-recep__list ::after {
   box-sizing: border-box;
@@ -134,16 +133,16 @@
 
 .Favo-recipe-item {
   background-color: var(--color-basic-bg);
-  flex-basis: 225px;
-  width: 220px;
-  height: 400px;
-  border: solid 1px var(--color-accent);
+  flex-basis: 230px;
+  width: 230px;
+  height: 350px;
+  box-shadow: 1px 1px 20px -5px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   overflow: hidden;
 }
 .Favo-recipe-item__img {
   position: absolute;
-  width: 230px;
+  width: 240px;
   -o-object-fit: cover;
      object-fit: cover;
   height: 200px;
