--- a/src/components/Recipe/Styling/favorites.scss
+++ b/src/components/Recipe/Styling/favorites.scss
@@ -13,7 +13,7 @@
   &__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 10px 20px;
   }
 
   &__title {
@@ -26,13 +26,12 @@
   }
 
   &__list {
-    width: 80%;
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
-    margin-bottom: 2em;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-bottom: 2em; 
 
     ::after {
       box-sizing: border-box;
@@ -146,16 +145,16 @@
 //favorite item
 .Favo-recipe-item {
   background-color: var(--color-basic-bg);
-  flex-basis: 225px;
-  width: 220px;
-  height: 400px;
-  border: solid 1px var(--color-accent);
+  flex-basis: 230px;
+  width: 230px;
+  height: 350px;
+  box-shadow: 1px 1px 20px -5px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   overflow: hidden;
 
   &__img {
     position: absolute;
-    width: 230px;
+    width: 240px;
     object-fit: cover;
     height: 200px;
     z-index: 10;
